syntax = "proto3";

option go_package = "git.edenfarm.id/project-version3/erp-services/erp-protobuf/gen/proto/audit_service";
option objc_class_prefix = "EOP";

package proto.audit_service;

import "google/protobuf/timestamp.proto";

service AuditService {
    rpc CreateLog(CreateLogRequest) returns (CreateLogResponse) {}
}

message Log {
    string id = 1;
    int64 user_id = 2;
    string user_id_gp = 3;
    string reference_id = 4;
    string type = 5;
    string function = 6;
    google.protobuf.Timestamp created_at = 7;
    string note = 8;
    string supportiveData = 9;
}

message CreateLogRequest{
    Log log = 1;
}

message CreateLogResponse{
    int32 code = 1;
    string message = 2;
    Log data = 3;
}